Trying to fix the visibility of the poems

--- a/themes/nightfall/assets/sass/components/_poems.scss
+++ b/themes/nightfall/assets/sass/components/_poems.scss
@@ -11,6 +11,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   color: #fff;
+  margin-top: 15px;
 }
 
 .poems-gallery {
